--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -467,7 +467,7 @@
 
     .table-container {
         width: 90vw;
-        height: 55vh;
+        height: 52vh;
     }
 
     .users-table-container {
@@ -546,6 +546,11 @@
 }
 
 @media only screen and (min-width:501px) and (max-width:768px) {
+
+    .users-container {
+        margin-top: 0;
+    }
+
     .admin-header-user {
         display: flex;
         align-items: center;
@@ -568,7 +573,7 @@
 
     .table-container {
         width: 90vw;
-        height: 50vh;
+        height: 47vh;
     }
 
     .users-table-container {
@@ -642,7 +647,7 @@
     .user-search-input::placeholder {
         color: #828181;
         font-size: bold;
-        position: absolute;
+        position: relative;
         left: 15px;
     }
 
@@ -693,12 +698,12 @@
     }
 }
 
-@media only screen and (min-width:500.11px) and (max-width:768px) {
+/* @media only screen and (min-width:500.11px) and (max-width:768px) {
     .admin-header-container-user {
         margin-top: 10px;
     }
 
-}
+} */
 
 @media only screen and (min-width:769px) and (max-width:1024px) {
 
@@ -713,7 +718,6 @@
 
     .users-btn {
         border-radius: 12px;
-        /* padding: 5px 13px 5px 13px; */
         padding: 5px 10px;
     }
 
@@ -734,6 +738,7 @@
 
     .table-container {
         width: 80vw;
+        height: 53vh;
     }
 
     .users-table-container {
@@ -773,6 +778,7 @@
 
     .table-container {
         width: 85vw;
+        height: 53vh;
     }
 
     .users-table-container {
@@ -781,6 +787,12 @@
         padding: 5px;
     }
 
+}
+
+@media only screen and (min-width:1025px) and (max-width:1488px){
+    .table-container {
+        height: 52vh;
+    }
 }
 
 @media only screen and (max-width: 768px) {
