--- a/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
@@ -398,7 +398,7 @@
 
   .attendance {
     width: 90vw;
-    height: 55vh;
+    height: 50vh;
   }
 
   .attendance-table-container {
@@ -410,6 +410,10 @@
 }
 
 @media only screen and (min-width:501px) and (max-width:768px) {
+
+  .attendance-container {
+    margin-top: 0;
+  }
 
   .attendance-header {
     display: flex;
@@ -505,7 +509,7 @@
 
   .attendance {
     width: 90vw;
-    height: 50vh;
+    height: 48vh;
   }
 
   .attendance-table-container {
@@ -521,12 +525,12 @@
 
 }
 
-@media only screen and (min-width:500.11px) and (max-width:768px) {
+/* @media only screen and (min-width:500.11px) and (max-width:768px) {
   .admin-header-attendance {
     margin-top: 10px;
   }
 
-}
+} */
 
 @media only screen and (max-width:768px) {
   .admin-slidebar {
@@ -570,6 +574,7 @@
 
   .attendance {
     width: 80vw;
+    height: 53vh;
   }
 
   .attendance-table-container {
@@ -597,6 +602,14 @@
     position: relative;
     top: 15px;
     padding: 5px;
+  }
+
+}
+
+@media only screen and (min-width:1024px) and (max-width:1488px){
+
+  .attendance {
+    height: 53vh;
   }
 
 }
