--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
@@ -213,11 +213,6 @@
     cursor: pointer;
 }
 
-.admintable-container {
-    height: 70vh;
-    overflow-y: auto;
-}
-
 .spinner {
     border: 4px solid #f3f3f3;
     border-top: 4px solid #065c96;
@@ -354,28 +349,28 @@
 .custom-modal .modal-dialog {
     max-height: 80%;
     margin: auto;
-  }
-  
-  .custom-modal .modal-content {
-    height: 100%; 
-  }
-  
-  .custom-modal .modal-body {
-    overflow-y: auto; 
-    max-height: 70vh; 
-  }
+}
 
-  .model-details {
+.custom-modal .modal-content {
+    height: 100%;
+}
+
+.custom-modal .modal-body {
+    overflow-y: auto;
+    max-height: 70vh;
+}
+
+.model-details {
     background-color: #f5f5f5;
     padding: 15px;
     margin: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
+}
 
 @media only screen and (min-width:319px) and (max-width:500px) {
 
@@ -519,13 +514,18 @@
     .table-container-admin {
         position: relative;
         top: 15px;
-        padding: 0 5px 0 5px;
+        padding: 10px;
         overflow-y: auto;
         height: 55vh;
     }
 }
 
 @media only screen and (min-width:501px) and (max-width:768px) {
+
+    .admin-container {
+        margin-top: 0;
+    }
+
     .admin-header {
         display: flex;
         align-items: center;
@@ -705,12 +705,12 @@
     }
 }
 
-@media only screen and (min-width:500.11px) and (max-width:768px) {
+/* @media only screen and (min-width:500.11px) and (max-width:768px) {
     .admin-header-container {
         margin-top: 10px;
     }
 
-}
+} */
 
 @media only screen and (min-width:769px) and (max-width:1024px) {
 
