--- a/Insurance-app-main/src/Components/AdminDashboard/DashboardAdmin/Dashboard.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/DashboardAdmin/Dashboard.css
@@ -41,6 +41,16 @@
     color: #007bff;
     font-weight: bold;
   }
+  .dashboard-chart {
+    margin-top: 30px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
  
   
