--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -101,6 +101,7 @@
   width: 83%;
   padding: 10px;
   gap: 10px;
+  /* position: absolute; */
   position: fixed;
   border-bottom: 1px solid #aaaaaa;
   transition: width 0.5s ease;
